y.output
Terminals which are not used

   BOOL
   ARRAY
   IF
   THEN
   ELSE
   FOR
   WHILE
   CONTINUE
   BREAK
   SEMICOLON
   RETURN
   EOF
   PRINT


Grammar

    0 $accept: expr $end

    1 typ: VOID
    2    | INT
    3    | STRING
    4    | typ LBRACK RBRACK
    5    | CHAR

    6 make_arrayL: /* empty */
    7            | LCURLY args RCURLY

    8 expr: INTL
    9     | IDL
   10     | BOOLL
   11     | CHARL
   12     | expr PLUS expr
   13     | expr MINUS expr
   14     | expr TIMES expr
   15     | expr DIVIDE expr
   16     | expr MODULO expr
   17     | MINUS expr
   18     | expr COMPEQUAL expr
   19     | expr COMPNOTEQUAL expr
   20     | expr LESSTHAN expr
   21     | expr GREATERTHAN expr
   22     | expr GTEQT expr
   23     | expr LTEQT expr
   24     | expr UNION expr
   25     | expr INTERSECTION expr
   26     | LPAREN expr RPAREN
   27     | LCURLY expr RCURLY
   28     | LBRACK expr RBRACK
   29     | expr LPAREN expr RPAREN
   30     | IDL ASSIGN expr
   31     | IDL INCREMENT expr
   32     | IDL DECREMENT expr
   33     | expr AND expr
   34     | expr OR expr
   35     | NEGATE expr
   36     | NEW typ LBRACK expr RBRACK make_arrayL

   37 args: expr
   38     | args COMMA expr


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 2
STRING (259) 3
BOOL (260)
VOID (261) 1
ARRAY (262)
CHAR (263) 5
PLUS (264) 12
MINUS (265) 13 17
TIMES (266) 14
DIVIDE (267) 15
MODULO (268) 16
COMPEQUAL (269) 18
COMPNOTEQUAL (270) 19
LESSTHAN (271) 20
GREATERTHAN (272) 21
GTEQT (273) 22
LTEQT (274) 23
UNION (275) 24
INTERSECTION (276) 25
IF (277)
THEN (278)
ELSE (279)
FOR (280)
WHILE (281)
CONTINUE (282)
BREAK (283)
SEMICOLON (284)
RETURN (285)
EOF (286)
LPAREN (287) 26 29
RPAREN (288) 26 29
LCURLY (289) 7 27
RCURLY (290) 7 27
LBRACK (291) 4 28 36
RBRACK (292) 4 28 36
ASSIGN (293) 30
INCREMENT (294) 31
DECREMENT (295) 32
AND (296) 33
OR (297) 34
NEGATE (298) 35
PRINT (299)
COMMA (300) 38
NEW (301) 36
INTL (302) 8
IDL (303) 9 30 31 32
BOOLL (304) 10
CHARL (305) 11


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
typ (52)
    on left: 1 2 3 4 5, on right: 4 36
make_arrayL (53)
    on left: 6 7, on right: 36
expr (54)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
    27 28 29 30 31 32 33 34 35 36, on right: 0 12 13 14 15 16 17 18
    19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
args (55)
    on left: 37 38, on right: 7 38


state 0

    0 $accept: . expr $end

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 11


state 1

   17 expr: MINUS . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 12


state 2

   26 expr: LPAREN . expr RPAREN

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 13


state 3

   27 expr: LCURLY . expr RCURLY

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 14


state 4

   28 expr: LBRACK . expr RBRACK

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 15


state 5

   35 expr: NEGATE . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 16


state 6

   36 expr: NEW . typ LBRACK expr RBRACK make_arrayL

    INT     shift, and go to state 17
    STRING  shift, and go to state 18
    VOID    shift, and go to state 19
    CHAR    shift, and go to state 20

    typ  go to state 21


state 7

    8 expr: INTL .

    $default  reduce using rule 8 (expr)


state 8

    9 expr: IDL .
   30     | IDL . ASSIGN expr
   31     | IDL . INCREMENT expr
   32     | IDL . DECREMENT expr

    ASSIGN     shift, and go to state 22
    INCREMENT  shift, and go to state 23
    DECREMENT  shift, and go to state 24

    $default  reduce using rule 9 (expr)


state 9

   10 expr: BOOLL .

    $default  reduce using rule 10 (expr)


state 10

   11 expr: CHARL .

    $default  reduce using rule 11 (expr)


state 11

    0 $accept: expr . $end
   12 expr: expr . PLUS expr
   13     | expr . MINUS expr
   14     | expr . TIMES expr
   15     | expr . DIVIDE expr
   16     | expr . MODULO expr
   18     | expr . COMPEQUAL expr
   19     | expr . COMPNOTEQUAL expr
   20     | expr . LESSTHAN expr
   21     | expr . GREATERTHAN expr
   22     | expr . GTEQT expr
   23     | expr . LTEQT expr
   24     | expr . UNION expr
   25     | expr . INTERSECTION expr
   29     | expr . LPAREN expr RPAREN
   33     | expr . AND expr
   34     | expr . OR expr

    $end          shift, and go to state 25
    PLUS          shift, and go to state 26
    MINUS         shift, and go to state 27
    TIMES         shift, and go to state 28
    DIVIDE        shift, and go to state 29
    MODULO        shift, and go to state 30
    COMPEQUAL     shift, and go to state 31
    COMPNOTEQUAL  shift, and go to state 32
    LESSTHAN      shift, and go to state 33
    GREATERTHAN   shift, and go to state 34
    GTEQT         shift, and go to state 35
    LTEQT         shift, and go to state 36
    UNION         shift, and go to state 37
    INTERSECTION  shift, and go to state 38
    LPAREN        shift, and go to state 39
    AND           shift, and go to state 40
    OR            shift, and go to state 41


state 12

   12 expr: expr . PLUS expr
   13     | expr . MINUS expr
   14     | expr . TIMES expr
   15     | expr . DIVIDE expr
   16     | expr . MODULO expr
   17     | MINUS expr .
   18     | expr . COMPEQUAL expr
   19     | expr . COMPNOTEQUAL expr
   20     | expr . LESSTHAN expr
   21     | expr . GREATERTHAN expr
   22     | expr . GTEQT expr
   23     | expr . LTEQT expr
   24     | expr . UNION expr
   25     | expr . INTERSECTION expr
   29     | expr . LPAREN expr RPAREN
   33     | expr . AND expr
   34     | expr . OR expr

    UNION         shift, and go to state 37
    INTERSECTION  shift, and go to state 38
    LPAREN        shift, and go to state 39

    $default  reduce using rule 17 (expr)


state 13

   12 expr: expr . PLUS expr
   13     | expr . MINUS expr
   14     | expr . TIMES expr
   15     | expr . DIVIDE expr
   16     | expr . MODULO expr
   18     | expr . COMPEQUAL expr
   19     | expr . COMPNOTEQUAL expr
   20     | expr . LESSTHAN expr
   21     | expr . GREATERTHAN expr
   22     | expr . GTEQT expr
   23     | expr . LTEQT expr
   24     | expr . UNION expr
   25     | expr . INTERSECTION expr
   26     | LPAREN expr . RPAREN
   29     | expr . LPAREN expr RPAREN
   33     | expr . AND expr
   34     | expr . OR expr

    PLUS          shift, and go to state 26
    MINUS         shift, and go to state 27
    TIMES         shift, and go to state 28
    DIVIDE        shift, and go to state 29
    MODULO        shift, and go to state 30
    COMPEQUAL     shift, and go to state 31
    COMPNOTEQUAL  shift, and go to state 32
    LESSTHAN      shift, and go to state 33
    GREATERTHAN   shift, and go to state 34
    GTEQT         shift, and go to state 35
    LTEQT         shift, and go to state 36
    UNION         shift, and go to state 37
    INTERSECTION  shift, and go to state 38
    LPAREN        shift, and go to state 39
    RPAREN        shift, and go to state 42
    AND           shift, and go to state 40
    OR            shift, and go to state 41


state 14

   12 expr: expr . PLUS expr
   13     | expr . MINUS expr
   14     | expr . TIMES expr
   15     | expr . DIVIDE expr
   16     | expr . MODULO expr
   18     | expr . COMPEQUAL expr
   19     | expr . COMPNOTEQUAL expr
   20     | expr . LESSTHAN expr
   21     | expr . GREATERTHAN expr
   22     | expr . GTEQT expr
   23     | expr . LTEQT expr
   24     | expr . UNION expr
   25     | expr . INTERSECTION expr
   27     | LCURLY expr . RCURLY
   29     | expr . LPAREN expr RPAREN
   33     | expr . AND expr
   34     | expr . OR expr

    PLUS          shift, and go to state 26
    MINUS         shift, and go to state 27
    TIMES         shift, and go to state 28
    DIVIDE        shift, and go to state 29
    MODULO        shift, and go to state 30
    COMPEQUAL     shift, and go to state 31
    COMPNOTEQUAL  shift, and go to state 32
    LESSTHAN      shift, and go to state 33
    GREATERTHAN   shift, and go to state 34
    GTEQT         shift, and go to state 35
    LTEQT         shift, and go to state 36
    UNION         shift, and go to state 37
    INTERSECTION  shift, and go to state 38
    LPAREN        shift, and go to state 39
    RCURLY        shift, and go to state 43
    AND           shift, and go to state 40
    OR            shift, and go to state 41


state 15

   12 expr: expr . PLUS expr
   13     | expr . MINUS expr
   14     | expr . TIMES expr
   15     | expr . DIVIDE expr
   16     | expr . MODULO expr
   18     | expr . COMPEQUAL expr
   19     | expr . COMPNOTEQUAL expr
   20     | expr . LESSTHAN expr
   21     | expr . GREATERTHAN expr
   22     | expr . GTEQT expr
   23     | expr . LTEQT expr
   24     | expr . UNION expr
   25     | expr . INTERSECTION expr
   28     | LBRACK expr . RBRACK
   29     | expr . LPAREN expr RPAREN
   33     | expr . AND expr
   34     | expr . OR expr

    PLUS          shift, and go to state 26
    MINUS         shift, and go to state 27
    TIMES         shift, and go to state 28
    DIVIDE        shift, and go to state 29
    MODULO        shift, and go to state 30
    COMPEQUAL     shift, and go to state 31
    COMPNOTEQUAL  shift, and go to state 32
    LESSTHAN      shift, and go to state 33
    GREATERTHAN   shift, and go to state 34
    GTEQT         shift, and go to state 35
    LTEQT         shift, and go to state 36
    UNION         shift, and go to state 37
    INTERSECTION  shift, and go to state 38
    LPAREN        shift, and go to state 39
    RBRACK        shift, and go to state 44
    AND           shift, and go to state 40
    OR            shift, and go to state 41


state 16

   12 expr: expr . PLUS expr
   13     | expr . MINUS expr
   14     | expr . TIMES expr
   15     | expr . DIVIDE expr
   16     | expr . MODULO expr
   18     | expr . COMPEQUAL expr
   19     | expr . COMPNOTEQUAL expr
   20     | expr . LESSTHAN expr
   21     | expr . GREATERTHAN expr
   22     | expr . GTEQT expr
   23     | expr . LTEQT expr
   24     | expr . UNION expr
   25     | expr . INTERSECTION expr
   29     | expr . LPAREN expr RPAREN
   33     | expr . AND expr
   34     | expr . OR expr
   35     | NEGATE expr .

    PLUS          shift, and go to state 26
    MINUS         shift, and go to state 27
    TIMES         shift, and go to state 28
    DIVIDE        shift, and go to state 29
    MODULO        shift, and go to state 30
    COMPEQUAL     shift, and go to state 31
    COMPNOTEQUAL  shift, and go to state 32
    LESSTHAN      shift, and go to state 33
    GREATERTHAN   shift, and go to state 34
    GTEQT         shift, and go to state 35
    LTEQT         shift, and go to state 36
    UNION         shift, and go to state 37
    INTERSECTION  shift, and go to state 38
    LPAREN        shift, and go to state 39

    $default  reduce using rule 35 (expr)


state 17

    2 typ: INT .

    $default  reduce using rule 2 (typ)


state 18

    3 typ: STRING .

    $default  reduce using rule 3 (typ)


state 19

    1 typ: VOID .

    $default  reduce using rule 1 (typ)


state 20

    5 typ: CHAR .

    $default  reduce using rule 5 (typ)


state 21

    4 typ: typ . LBRACK RBRACK
   36 expr: NEW typ . LBRACK expr RBRACK make_arrayL

    LBRACK  shift, and go to state 45


state 22

   30 expr: IDL ASSIGN . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 46


state 23

   31 expr: IDL INCREMENT . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 47


state 24

   32 expr: IDL DECREMENT . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 48


state 25

    0 $accept: expr $end .

    $default  accept


state 26

   12 expr: expr PLUS . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 49


state 27

   13 expr: expr MINUS . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 50


state 28

   14 expr: expr TIMES . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 51


state 29

   15 expr: expr DIVIDE . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 52


state 30

   16 expr: expr MODULO . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 53


state 31

   18 expr: expr COMPEQUAL . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 54


state 32

   19 expr: expr COMPNOTEQUAL . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 55


state 33

   20 expr: expr LESSTHAN . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 56


state 34

   21 expr: expr GREATERTHAN . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 57


state 35

   22 expr: expr GTEQT . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 58


state 36

   23 expr: expr LTEQT . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 59


state 37

   24 expr: expr UNION . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 60


state 38

   25 expr: expr INTERSECTION . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 61


state 39

   29 expr: expr LPAREN . expr RPAREN

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 62


state 40

   33 expr: expr AND . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 63


state 41

   34 expr: expr OR . expr

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 64


state 42

   26 expr: LPAREN expr RPAREN .

    $default  reduce using rule 26 (expr)


state 43

   27 expr: LCURLY expr RCURLY .

    $default  reduce using rule 27 (expr)


state 44

   28 expr: LBRACK expr RBRACK .

    $default  reduce using rule 28 (expr)


state 45

    4 typ: typ LBRACK . RBRACK
   36 expr: NEW typ LBRACK . expr RBRACK make_arrayL

    MINUS   shift, and go to state 1
    LPAREN  shift, and go to state 2
    LCURLY  shift, and go to state 3
    LBRACK  shift, and go to state 4
    RBRACK  shift, and go to state 65
    NEGATE  shift, and go to state 5
    NEW     shift, and go to state 6
    INTL    shift, and go to state 7
    IDL     shift, and go to state 8
    BOOLL   shift, and go to state 9
    CHARL   shift, and go to state 10

    expr  go to state 66


state 46

   12 expr: expr . PLUS expr
   13     | expr . MINUS expr
   14     | expr . TIMES expr
   15     | expr . DIVIDE expr
   16     | expr . MODULO expr
   18     | expr . COMPEQUAL expr
   19     | expr . COMPNOTEQUAL expr
   20     | expr . LESSTHAN expr
   21     | expr . GREATERTHAN expr
   22     | expr . GTEQT expr
   23     | expr . LTEQT expr
   24     | expr . UNION expr
   25     | expr . INTERSECTION expr
   29     | expr . LPAREN expr RPAREN
   30     | IDL ASSIGN expr .
   33     | expr . AND expr
   34     | expr . OR expr

    PLUS          shift, and go to state 26
    MINUS         shift, and go to state 27
    TIMES         shift, and go to state 28
    DIVIDE        shift, and go to state 29
    MODULO        shift, and go to state 30
    COMPEQUAL     shift, and go to state 31
    COMPNOTEQUAL  shift, and go to state 32
    LESSTHAN      shift, and go to state 33
    GREATERTHAN   shift, and go to state 34
    GTEQT         shift, and go to state 35
    LTEQT         shift, and go to state 36
    UNION         shift, and go to state 37
    INTERSECTION  shift, and go to state 38
    LPAREN        shift, and go to state 39
    AND           shift, and go to state 40
    OR            shift, and go to state 41

    $default  reduce using rule 30 (expr)


state 47

   12 expr: expr . PLUS expr
   13     | expr . MINUS expr
   14     | expr . TIMES expr
   15     | expr . DIVIDE expr
   16     | expr . MODULO expr
   18     | expr . COMPEQUAL expr
   19     | expr . COMPNOTEQUAL expr
   20     | expr . LESSTHAN expr
   21     | expr . GREATERTHAN expr
   22     | expr . GTEQT expr
   23     | expr . LTEQT expr
   24     | expr . UNION expr
   25     | expr . INTERSECTION expr
   29     | expr . LPAREN expr RPAREN
   31     | IDL INCREMENT expr .
   33     | expr . AND expr
   34     | expr . OR expr

    PLUS          shift, and go to state 26
    MINUS         shift, and go to state 27
    TIMES         shift, and go to state 28
    DIVIDE        shift, and go to state 29
    MODULO        shift, and go to state 30
    COMPEQUAL     shift, and go to state 31
    COMPNOTEQUAL  shift, and go to state 32
    LESSTHAN      shift, and go to state 33
    GREATERTHAN   shift, and go to state 34
    GTEQT         shift, and go to state 35
    LTEQT         shift, and go to state 36
    UNION         shift, and go to state 37
    INTERSECTION  shift, and go to state 38
    LPAREN        shift, and go to state 39
    AND           shift, and go to state 40
    OR            shift, and go to state 41

    $default  reduce using rule 31 (expr)


state 48

   12 expr: expr . PLUS expr
   13     | expr . MINUS expr
   14     | expr . TIMES expr
   15     | expr . DIVIDE expr
   16     | expr . MODULO expr
   18     | expr . COMPEQUAL expr
   19     | expr . COMPNOTEQUAL expr
   20     | expr . LESSTHAN expr
   21     | expr . GREATERTHAN expr
   22     | expr . GTEQT expr
   23     | expr . LTEQT expr
   24     | expr . UNION expr
   25     | expr . INTERSECTION expr
   29     | expr . LPAREN expr RPAREN
   32     | IDL DECREMENT expr .
   33     | expr . AND expr
   34     | expr . OR expr

    PLUS          shift, and go to state 26
    MINUS         shift, and go to state 27
    TIMES         shift, and go to state 28
    DIVIDE        shift, and go to state 29
    MODULO        shift, and go to state 30
    COMPEQUAL     shift, and go to state 31
    COMPNOTEQUAL  shift, and go to state 32
    LESSTHAN      shift, and go to state 33
    GREATERTHAN   shift, and go to state 34
    GTEQT         shift, and go to state 35
    LTEQT         shift, and go to state 36
    UNION         shift, and go to state 37
    INTERSECTION  shift, and go to state 38
    LPAREN        shift, and go to state 39
    AND           shift, and go to state 40
    OR            shift, and go to state 41

    $default  reduce using rule 32 (expr)


state 49

   12 expr: expr . PLUS expr
   12     | expr PLUS expr .
   13     | expr . MINUS expr
   14     | expr . TIMES expr
   15     | expr . DIVIDE expr
   16     | expr . MODULO expr
   18     | expr . COMPEQUAL expr
   19     | expr . COMPNOTEQUAL expr
   20     | expr . LESSTHAN expr
   21     | expr . GREATERTHAN expr
   22     | expr . GTEQT expr
   23     | expr . LTEQT expr
   24     | expr . UNION expr
   25     | expr . INTERSECTION expr
   29     | expr . LPAREN expr RPAREN
   33     | expr . AND expr
   34     | expr . OR expr

    TIMES         shift, and go to state 28
    DIVIDE        shift, and go to state 29
    MODULO        shift, and go to state 30
    UNION         shift, and go to state 37
    INTERSECTION  shift, and go to state 38
    LPAREN        shift, and go to state 39

    $default  reduce using rule 12 (expr)


state 50

   12 expr: expr . PLUS expr
   13     | expr . MINUS expr
   13     | expr MINUS expr .
   14     | expr . TIMES expr
   15     | expr . DIVIDE expr
   16     | expr . MODULO expr
   18     | expr . COMPEQUAL expr
   19     | expr . COMPNOTEQUAL expr
   20     | expr . LESSTHAN expr
   21     | expr . GREATERTHAN expr
   22     | expr . GTEQT expr
   23     | expr . LTEQT expr
   24     | expr . UNION expr
   25     | expr . INTERSECTION expr
   29     | expr . LPAREN expr RPAREN
   33     | expr . AND expr
   34     | expr . OR expr
